<resources>
    <string name="app_name">NutritionTrack</string>
    <string name="email_hint">name@gmail.com </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="acivity_Level">Activity Level</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="resgister">Create Account</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">already have an account? Sign In</string>
    <string name="does_not_have_an_account">Does not have an account? Sign Up</string>
    <string name="add_">+ Add</string>
    <string name="calories">Total Calories</string>
    <string name="Amount_hint">1</string>
    <string name="add_meal">Add</string>
    <string name="amount_hint_text">Amount</string>
    <string name="search_text">Search</string>
    <string name="save_text">Save</string>
    <string name="addHomeFragment">Add +</string>
    <string name="text_field_empty">Field is Empty</string>
    <string name="invalid_email">Invalid Email</string>





</resources>